--- a/notebooks/01-AMV-eda.ipynb
+++ b/notebooks/01-AMV-eda.ipynb
@@ -42,6 +42,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "##Add some new text: new version\n",
+    "import tensorflow as tf"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
