--- a/notebooks/01-AMV-eda.ipynb
+++ b/notebooks/01-AMV-eda.ipynb
@@ -37,8 +37,8 @@
    "outputs": [],
    "source": [
     "#Directories used:\n",
-    "raw_data= \"/Users/aura.moreno/Documents/Jedha/Jedha_Final_Project/agribalyse/data/raw/\"\n",
-    "figures= \"/Users/aura.moreno/Documents/Jedha/Jedha_Final_Project/agribalyse/reports/figures/\"\n"
+    "raw_data= \"../data/raw/\"\n",
+    "figures= \"../reports/figures/\"\n"
    ]
   },
   {
@@ -3806,7 +3806,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.11"
   },
   "orig_nbformat": 4
  },
