--- a/notebooks/01-AMV-eda.ipynb
+++ b/notebooks/01-AMV-eda.ipynb
@@ -38,7 +38,10 @@
    "source": [
     "#Directories used:\n",
     "raw_data= \"/Users/aura.moreno/Documents/Jedha/Jedha_Final_Project/agribalyse/data/raw/\"\n",
-    "figures= \"/Users/aura.moreno/Documents/Jedha/Jedha_Final_Project/agribalyse/reports/figures/\"\n"
+    "figures= \"/Users/aura.moreno/Documents/Jedha/Jedha_Final_Project/agribalyse/reports/figures/\"\n",
+    "\n",
+    "#I am adding some new text\n",
+    "print(\"Hello world\")"
    ]
   },
   {
