Cleaning python scripts for preprocesing

--- a/notebooks/02-preprocessing.ipynb
+++ b/notebooks/02-preprocessing.ipynb
@@ -2,11 +2,30 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
+   "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import src.data\n",
+    "from src.data import preprocessing\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import scipy\n",
@@ -18,71 +37,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "%load_ext autoreload\n",
-    "%autoreload 2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 107,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "synthese_df = pd.read_csv('../data/raw/Agribalyse_Synthese.csv')\n",
-    "ingred_df = pd.read_csv('../data/raw/Agribalyse_Detail ingredient.csv')\n",
-    "etapes_df = pd.read_csv('../data/raw/Agribalyse_Detail etape.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['Code AGB', 'Code CIQUAL', 'Groupe d'aliment', 'Sous-groupe d'aliment',\n",
-       "       'Nom du Produit en Français', 'LCI Name', 'Saisonnalité',\n",
-       "       'Transport par avion (1 : par avion)', 'Livraison',\n",
-       "       'Matériau d'emballage', 'Préparation',\n",
-       "       'DQR - Note de qualité de la donnée (1 excellente ; 5 très faible)',\n",
-       "       'Score unique EF (mPt/kg de produit)'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "keep_synthese = [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12]\n",
-    "synthese_df.columns[keep_synthese]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['Ciqual AGB', 'Ingredients', 'Score unique EF (mPt/kg de produit)'], dtype='object')"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "keep_ingred = [0, 6, 7]\n",
-    "ingred_df.columns[keep_ingred]"
+    "params = preprocessing.dict_params\n",
+    "INPUT_FILE_PATH = './../data/raw'\n",
+    "OUTPUT_FILE_PATH = './../data/interim'\n",
+    "INDEX_KEY = 0 # the 1st column is the primary key\n",
+    "\n",
+    "preprocessing.preprocess_dataset(preprocessing.get_param('synthse', 'file_name'), INPUT_FILE_PATH, OUTPUT_FILE_PATH, INDEX_KEY)"
    ]
   },
   {
