--- a/notebooks/01-AR-Liste-Ingredients.ipynb
+++ b/notebooks/01-AR-Liste-Ingredients.ipynb
@@ -308,6 +308,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "5ab10864",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.drop('Autres étapes', 1, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "id": "5f183cf0",
    "metadata": {},
@@ -683,8 +693,7 @@
    "hash": "bf00618e8c6f546625f4a2c090ffbae79181841d7c85bf7820449e71020fcec6"
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
-   "language": "python",
+   "display_name": "Python 3.8.8 64-bit ('venv': venv)",
    "name": "python3"
   },
   "language_info": {
