--- a/notebooks/04-train-model-baseline.ipynb
+++ b/notebooks/04-train-model-baseline.ipynb
@@ -337,7 +337,7 @@
    "hash": "5cc47c8831822e32dd5f765150260df6f896d34b43f3e216997ee9b0d9ca468e"
   },
   "kernelspec": {
-   "display_name": "Python 3.7.11 64-bit ('pez-jedha': conda)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -352,9 +352,8 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.11"
-  },
-  "orig_nbformat": 4
+  }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
