--- a/notebooks/04-train-model-baseline.ipynb
+++ b/notebooks/04-train-model-baseline.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,8 @@
     "from src.data import preprocessing\n",
     "from sklearn.pipeline import Pipeline\n",
     "from sklearn.ensemble import RandomForestRegressor\n",
-    "from sklearn.decomposition import TruncatedSVD"
+    "from sklearn.decomposition import TruncatedSVD\n",
+    "import os"
    ]
   },
   {
@@ -39,7 +40,7 @@
    "outputs": [],
    "source": [
     "params = preprocessing.dict_params\n",
-    "INPUT_FILE_PATH = './../data/interim'\n",
+    "INPUT_FILE_PATH = './../data/processed'\n",
     "OUTPUT_FILE_PATH = './../models'\n",
     "INDEX_KEY = [0] # the 1st column is the primary key"
    ]
@@ -70,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -78,24 +79,27 @@
       "text/plain": [
        "Index(['Abats de bœuf', 'Abats de porc', 'Abats de poulet', 'Abats de veau',\n",
        "       'Abricot', 'Ail', 'Amande', 'Amidon de maïs', 'Ananas', 'Anchois',\n",
-       "       'Anchois commun', 'Asperges', 'Aubergine', 'Autres étapes', 'Avocat',\n",
-       "       'Avoine', 'Baie'],\n",
-       "      dtype='object')"
+       "       ...\n",
+       "       'max_EF_Viande de moutton sans os', 'max_EF_Viande de porc maigre',\n",
+       "       'max_EF_Viande de poulet sans os', 'max_EF_Viande de veau sans os',\n",
+       "       'max_EF_Vin blanc', 'max_EF_Vin rouge', 'max_EF_Yaourt',\n",
+       "       'max_EF_citron', 'max_EF_Échalote', 'max_EF_Œuf de poule'],\n",
+       "      dtype='object', length=639)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "data_df_ori = pd.read_csv(os.path.join(INPUT_FILE_PATH, preprocessing.get_param('ingredients', 'file_name')))\n",
-    "data_df_ori.columns[13:30]"
+    "data_df_ori.columns[13:]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,14 +128,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of ingredients kept for training :214\n",
+      "Number of ingredients kept for training :640\n",
       "Number of products kept for training:1038\n"
      ]
     }
@@ -143,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,14 +160,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "X_train:(830, 213)\n",
+      "X_train:(830, 639)\n",
       "y_train:(830,)\n"
      ]
     }
@@ -182,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,8 +219,8 @@
     "\n",
     "preprocessor = ColumnTransformer([\n",
     "        ('dim_reduction', svd_transformer, ingred_features),\n",
-    "        #('categoricals', cat_transformer, cat_features),\n",
-    "        #('numericals', num_transformer, num_features)\n",
+    "        ('categoricals', cat_transformer, cat_features),\n",
+    "        ('numericals', num_transformer, num_features)\n",
     "    ],\n",
     "    remainder = 'drop'\n",
     ")\n"
@@ -231,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,14 +247,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train - R2 Score: 0.5264377151950825\n"
+      "Train - R2 Score: 0.6508339969687613\n"
      ]
     }
    ],
@@ -271,16 +275,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.29700437387139056"
+       "0.701372164144787"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -291,14 +295,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train - R2 Score: 0.8933053937893302\n"
+      "Train - R2 Score: 0.8795006612098728\n"
      ]
     }
    ],
@@ -312,16 +316,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.433224362088791"
+       "0.70954390258068"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -330,6 +334,13 @@
     "y_pred = full_pipeline.predict(X_test)\n",
     "r2_score(y_test, y_pred)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -337,9 +348,9 @@
    "hash": "5cc47c8831822e32dd5f765150260df6f896d34b43f3e216997ee9b0d9ca468e"
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "kernel-pez-jedha",
    "language": "python",
-   "name": "python3"
+   "name": "kernel-pez-jedha"
   },
   "language_info": {
    "codemirror_mode": {
