Changes in pipeline and cleaning

--- a/notebooks/04-train-model-baseline.ipynb
+++ b/notebooks/04-train-model-baseline.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,24 +10,34 @@
     "import numpy as np\n",
     "from sklearn.pipeline import Pipeline\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.impute import SimpleImputer\n",
-    "from sklearn.preprocessing import  OneHotEncoder, StandardScaler\n",
+    "from sklearn.impute import  SimpleImputer\n",
+    "from sklearn.preprocessing import OneHotEncoder, StandardScaler\n",
     "from sklearn.compose import ColumnTransformer\n",
-    "from sklearn.model_selection import cross_val_score, GridSearchCV\n",
+    "#from sklearn.model_selection import cross_val_score, GridSearchCV\n",
     "from sklearn.metrics import r2_score\n",
     "from sklearn.linear_model import LinearRegression, Ridge\n",
     "from src.data import preprocessing\n",
     "from sklearn.pipeline import Pipeline\n",
     "from sklearn.ensemble import RandomForestRegressor\n",
     "from sklearn.decomposition import TruncatedSVD\n",
-    "import os"
+    "import os\n",
+    "import joblib"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -35,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +97,7 @@
        "      dtype='object', length=639)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -99,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,14 +257,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train - R2 Score: 0.6508339969687613\n"
+      "Train - R2 Score: 0.6840619654214265\n"
      ]
     }
    ],
@@ -275,16 +285,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.701372164144787"
+       "0.6047502062361272"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -295,14 +305,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train - R2 Score: 0.8795006612098728\n"
+      "Train - R2 Score: 0.8760663295759303\n"
      ]
     }
    ],
@@ -316,16 +326,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.70954390258068"
+       "0.6447548791067496"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -333,6 +343,27 @@
    "source": [
     "y_pred = full_pipeline.predict(X_test)\n",
     "r2_score(y_test, y_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['./../models/score_predictor.joblib']"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "MODELS_FOLDER = './../models'\n",
+    "joblib.dump(full_pipeline, os.path.join(MODELS_FOLDER, \"score_predictor.joblib\"))"
    ]
   },
   {
@@ -348,9 +379,9 @@
    "hash": "5cc47c8831822e32dd5f765150260df6f896d34b43f3e216997ee9b0d9ca468e"
   },
   "kernelspec": {
-   "display_name": "kernel-pez-jedha",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "kernel-pez-jedha"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -362,7 +393,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.11"
+   "version": "3.9.1"
   }
  },
  "nbformat": 4,
