--- a/notebooks/04-train-model-unsupervised.ipynb
+++ b/notebooks/04-train-model-unsupervised.ipynb
@@ -1119,43 +1119,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Train - R2 Score: 0.6508339969687613\n"
-     ]
-    }
-   ],
-   "source": [
-    "full_pipeline = Pipeline([\n",
-    "        ('transformation', preprocessor),\n",
-    "        ('dbscan', DBSCAN(eps=0.4, min_samples=3, metric=\"cosine\", algorithm=\"auto\"))\n",
-    "    ])\n",
-    "fit_predict(full_pipeline, X_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
     "def fit_predict(pipeline, X_train):\n",
-    "    pipe2 = Pipeline([('test1', preprocessor), ('test2', DBSCAN())])\n",
+    "    #pipe2 = Pipeline([('test1', preprocessor), ('test2', DBSCAN())])\n",
     "    pipeline.fit(X_train)\n",
     "    #y_pred = pipeline.predict(X_train)\n",
-    "    db = pipe2.steps[1]\n",
+    "    db = full_pipeline.named_steps['dbscan']\n",
     "    core_samples_mask = np.zeros_like(db.labels_, dtype=bool)\n",
     "    core_samples_mask[db.core_sample_indices_] = True\n",
     "    labels = db.labels_\n",
@@ -1165,24 +1137,12 @@
     "    n_noise_ = list(labels).count(-1)\n",
     "\n",
     "    print(\"Estimated number of clusters: %d\" % n_clusters_)\n",
-    "    print(\"Estimated number of noise points: %d\" % n_noise_)\n",
-    "    print(f'Train - R2 Score: {r2_score(y_train, y_pred)}')"
+    "    print(\"Estimated number of noise points: %d\" % n_noise_)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Model\n",
-    "#db = DBSCAN(eps=0.3, min_samples=3, metric=\"cosine\", algorithm=\"auto\").fit(X)\n",
-    "db = DBSCAN(eps=0.4, min_samples=3, metric=\"cosine\", algorithm=\"auto\").fit(X)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -1195,19 +1155,11 @@
     }
    ],
    "source": [
-    "#Get number of clusters and noise \n",
-    "core_samples_mask = np.zeros_like(db.labels_, dtype=bool)\n",
-    "core_samples_mask[db.core_sample_indices_] = True\n",
-    "labels = db.labels_\n",
-    "\n",
-    "\n",
-    "# Number of clusters in labels, ignoring noise if present.\n",
-    "n_clusters_ = len(set(labels)) - (1 if -1 in labels else 0)\n",
-    "n_noise_ = list(labels).count(-1)\n",
-    "\n",
-    "print(\"Estimated number of clusters: %d\" % n_clusters_)\n",
-    "print(\"Estimated number of noise points: %d\" % n_noise_)\n",
-    "\n"
+    "full_pipeline = Pipeline([\n",
+    "        ('transformation', preprocessor),\n",
+    "        ('dbscan', DBSCAN(eps=0.4, min_samples=3, metric=\"cosine\", algorithm=\"auto\"))\n",
+    "    ])\n",
+    "fit_predict(full_pipeline, X)"
    ]
   },
   {
