--- a/notebooks/04-AMV-unsupervised.ipynb
+++ b/notebooks/04-AMV-unsupervised.ipynb
@@ -1530,7 +1530,7 @@
    "hash": "5d141a4dd26617d006b2e5533cc6aaf112426b73c5673e768ec8b693f01a0cdd"
   },
   "kernelspec": {
-   "display_name": "Python 3.8.5 64-bit ('env': venv)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1544,10 +1544,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
-  },
-  "orig_nbformat": 4
+   "version": "3.9.1"
+  }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
