--- a/notebooks/05-predict-model.ipynb
+++ b/notebooks/05-predict-model.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "8874b1e2-b5b3-4228-96e3-3634b7644b99",
    "metadata": {},
    "outputs": [
@@ -140,7 +140,7 @@
        "4          Abricot  0.004451  0.046987"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "b58fadf0-8274-491e-a8d8-e21398f2255e",
    "metadata": {},
    "outputs": [
@@ -260,7 +260,7 @@
        "[1 rows x 639 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "ab303278-df2f-47e8-a3b4-283bf68c74c7",
    "metadata": {},
    "outputs": [
@@ -339,7 +339,7 @@
        "132                                      Miel     0.0     0.0"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -358,8 +358,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "3754acc5-ff21-4b5b-b54a-a914106ca32c",
+   "execution_count": null,
+   "id": "bc59f838-8deb-4032-8a99-48fc5aa0db45",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,71 +368,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "b2328440-8922-4766-9852-44f75c408861",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>min_EF</th>\n",
-       "      <th>max_EF</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Ingredients</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>Amande</th>\n",
-       "      <td>0.108593</td>\n",
-       "      <td>1.072579</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Abats de veau</th>\n",
-       "      <td>0.398916</td>\n",
-       "      <td>0.398916</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Abricot</th>\n",
-       "      <td>0.004451</td>\n",
-       "      <td>0.046987</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                 min_EF    max_EF\n",
-       "Ingredients                      \n",
-       "Amande         0.108593  1.072579\n",
-       "Abats de veau  0.398916  0.398916\n",
-       "Abricot        0.004451  0.046987"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'metric_df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_11556/419626121.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmetric_df\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mloc\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0muser_input\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'metric_df' is not defined"
+     ]
     }
    ],
    "source": [
@@ -451,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "277108fe-6294-4b1f-ad2d-0df6d1ff86dd",
    "metadata": {},
    "outputs": [],
@@ -465,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "36d563fb-9d43-4a46-9a69-4025152a75c8",
    "metadata": {},
    "outputs": [],
@@ -484,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "a0aee32f-4daf-4f82-ad80-2d001873ed62",
    "metadata": {},
    "outputs": [],
@@ -681,38 +630,118 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "f2b03d6a-c3dd-4b5a-b11a-03d2308b5cbc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Abats de bœuf</th>\n",
+       "      <th>Abats de porc</th>\n",
+       "      <th>Abats de poulet</th>\n",
+       "      <th>Abats de veau</th>\n",
+       "      <th>Abricot</th>\n",
+       "      <th>Ail</th>\n",
+       "      <th>Amande</th>\n",
+       "      <th>Amidon de maïs</th>\n",
+       "      <th>Ananas</th>\n",
+       "      <th>Anchois</th>\n",
+       "      <th>...</th>\n",
+       "      <th>max_EF_Viande de moutton sans os</th>\n",
+       "      <th>max_EF_Viande de porc maigre</th>\n",
+       "      <th>max_EF_Viande de poulet sans os</th>\n",
+       "      <th>max_EF_Viande de veau sans os</th>\n",
+       "      <th>max_EF_Vin blanc</th>\n",
+       "      <th>max_EF_Vin rouge</th>\n",
+       "      <th>max_EF_Yaourt</th>\n",
+       "      <th>max_EF_citron</th>\n",
+       "      <th>max_EF_Échalote</th>\n",
+       "      <th>max_EF_Œuf de poule</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1 rows × 639 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Abats de bœuf  Abats de porc  Abats de poulet  Abats de veau  Abricot  Ail  \\\n",
+       "0            0.0            0.0              0.0            1.0      1.0  0.0   \n",
+       "\n",
+       "   Amande  Amidon de maïs  Ananas  Anchois  ...  \\\n",
+       "0     1.0             0.0     0.0      0.0  ...   \n",
+       "\n",
+       "   max_EF_Viande de moutton sans os  max_EF_Viande de porc maigre  \\\n",
+       "0                               0.0                           0.0   \n",
+       "\n",
+       "   max_EF_Viande de poulet sans os  max_EF_Viande de veau sans os  \\\n",
+       "0                              0.0                            0.0   \n",
+       "\n",
+       "   max_EF_Vin blanc  max_EF_Vin rouge  max_EF_Yaourt  max_EF_citron  \\\n",
+       "0               0.0               0.0            0.0            0.0   \n",
+       "\n",
+       "   max_EF_Échalote  max_EF_Œuf de poule  \n",
+       "0              0.0                  0.0  \n",
+       "\n",
+       "[1 rows x 639 columns]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "pivot_desc_ing"
+    "canonical_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "79e8131e-b628-4e2f-8a01-113f225530fa",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ingred_df = pd.read_csv('./../data/processed/Agribalyse_Detail ingredient.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "193f445a-d6d1-4e6e-9a9e-021a1fd75981",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def format_user_ingredients(ingredients):\n",
-    "    pass"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 21,
    "id": "b273ad4d-3611-402a-8b26-aaf044c150ac",
    "metadata": {},
    "outputs": [
@@ -812,7 +841,7 @@
        "[1 rows x 639 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -834,17 +863,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 22,
    "id": "cc677f63-f8fa-4b12-b9be-9b35ed8fa2b4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.76128519])"
+       "array([0.80855531])"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
