--- a/notebooks/04-train-model-baseline.ipynb
+++ b/notebooks/04-train-model-baseline.ipynb
@@ -26,18 +26,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -45,12 +36,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "params = preprocessing.dict_params\n",
-    "INPUT_FILE_PATH = './../data/interim'\n",
+    "INPUT_FILE_PATH = './../data/processed'\n",
     "OUTPUT_FILE_PATH = './../models'\n",
     "INDEX_KEY = [0] # the 1st column is the primary key"
    ]
@@ -64,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +72,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
    "execution_count": 5,
    "metadata": {},
    "outputs": [
@@ -90,9 +80,12 @@
       "text/plain": [
        "Index(['Abats de bœuf', 'Abats de porc', 'Abats de poulet', 'Abats de veau',\n",
        "       'Abricot', 'Ail', 'Amande', 'Amidon de maïs', 'Ananas', 'Anchois',\n",
-       "       'Anchois commun', 'Asperges', 'Aubergine', 'Autres étapes', 'Avocat',\n",
-       "       'Avoine', 'Baie'],\n",
-       "      dtype='object')"
+       "       ...\n",
+       "       'max_EF_Viande de moutton sans os', 'max_EF_Viande de porc maigre',\n",
+       "       'max_EF_Viande de poulet sans os', 'max_EF_Viande de veau sans os',\n",
+       "       'max_EF_Vin blanc', 'max_EF_Vin rouge', 'max_EF_Yaourt',\n",
+       "       'max_EF_citron', 'max_EF_Échalote', 'max_EF_Œuf de poule'],\n",
+       "      dtype='object', length=639)"
       ]
      },
      "execution_count": 5,
@@ -102,7 +95,7 @@
    ],
    "source": [
     "data_df_ori = pd.read_csv(os.path.join(INPUT_FILE_PATH, preprocessing.get_param('ingredients', 'file_name')))\n",
-    "data_df_ori.columns[13:30]"
+    "data_df_ori.columns[13:]"
    ]
   },
   {
@@ -127,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,14 +129,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of ingredients kept for training :214\n",
+      "Number of ingredients kept for training :640\n",
       "Number of products kept for training:1038\n"
      ]
     }
@@ -155,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,14 +161,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "X_train:(830, 213)\n",
+      "X_train:(830, 639)\n",
       "y_train:(830,)\n"
      ]
     }
@@ -194,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +206,7 @@
     "\n",
     "# Transformer SVD\n",
     "svd_transformer = Pipeline([\n",
-    "    ('svd', TruncatedSVD(n_components=37)),])\n",
+    "    ('svd', TruncatedSVD(n_components=32)),])\n",
     "\n",
     "# transformer for numerical features\n",
     "num_transformer = Pipeline([\n",
@@ -227,8 +220,8 @@
     "\n",
     "preprocessor = ColumnTransformer([\n",
     "        ('dim_reduction', svd_transformer, ingred_features),\n",
-    "        #('categoricals', cat_transformer, cat_features),\n",
-    "        #('numericals', num_transformer, num_features)\n",
+    "        ('categoricals', cat_transformer, cat_features),\n",
+    "        ('numericals', num_transformer, num_features)\n",
     "    ],\n",
     "    remainder = 'drop'\n",
     ")\n"
@@ -243,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,14 +248,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train - R2 Score: 0.6840619654214265\n"
+      "Train - R2 Score: 0.6459045352958406\n"
      ]
     }
    ],
@@ -275,24 +268,17 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Predict on test set"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.6047502062361272"
+       "0.6635090890040776"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -302,15 +288,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Predict on test set"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train - R2 Score: 0.8933053937893302\n"
+      "Train - R2 Score: 0.869654510854984\n"
      ]
     }
    ],
@@ -324,16 +317,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.433224362088791"
+       "0.7483937295272598"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -342,6 +335,34 @@
     "y_pred = full_pipeline.predict(X_test)\n",
     "r2_score(y_test, y_pred)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['./../models/score_predictor.joblib']"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "MODELS_FOLDER = './../models'\n",
+    "joblib.dump(full_pipeline, os.path.join(MODELS_FOLDER, \"score_predictor.joblib\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -349,9 +370,9 @@
    "hash": "5cc47c8831822e32dd5f765150260df6f896d34b43f3e216997ee9b0d9ca468e"
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "kernel-pez-jedha",
    "language": "python",
-   "name": "python3"
+   "name": "kernel-pez-jedha"
   },
   "language_info": {
    "codemirror_mode": {
@@ -363,7 +384,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.7.11"
   }
  },
  "nbformat": 4,
