--- a/notebooks/04-train-model-gridsearchCV.ipynb
+++ b/notebooks/04-train-model-gridsearchCV.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
     "from sklearn.impute import  SimpleImputer\n",
     "from sklearn.preprocessing import OneHotEncoder, StandardScaler\n",
     "from sklearn.compose import ColumnTransformer\n",
-    "#from sklearn.model_selection import cross_val_score, GridSearchCV\n",
+    "from sklearn.model_selection import cross_val_score, GridSearchCV\n",
     "from sklearn.metrics import r2_score\n",
     "from sklearn.linear_model import LinearRegression, Ridge\n",
     "from src.data import preprocessing\n",
@@ -21,14 +21,24 @@
     "from sklearn.ensemble import RandomForestRegressor\n",
     "from sklearn.decomposition import TruncatedSVD\n",
     "import os\n",
-    "import joblib"
+    "import joblib\n",
+    "from sklearn.linear_model import Lasso"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -36,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +98,7 @@
        "      dtype='object', length=639)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -100,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +206,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def fit_predict(pipeline, X_train, y_train):\n",
+    "    pipeline.fit(X_train, y_train)\n",
+    "    y_pred = pipeline.predict(X_train)\n",
+    "    print(f'Train - R2 Score: {r2_score(y_train, y_pred)}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### GridsearchCV Random Forest "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +233,6 @@
     "cat_features = []\n",
     "num_features = []\n",
     "\n",
-    "# Transformer SVD\n",
     "svd_transformer = Pipeline([\n",
     "    ('svd', TruncatedSVD(n_components=32)),])\n",
     "\n",
@@ -221,148 +249,147 @@
     "preprocessor = ColumnTransformer([\n",
     "        ('categoricals', cat_transformer, cat_features),\n",
     "        ('numericals', num_transformer, num_features),\n",
-    "         ('dim_reduction', svd_transformer, ingred_features)\n",
+    "        ('dim_reduction', svd_transformer, ingred_features),\n",
     "    ],\n",
     "    remainder = 'drop'\n",
-    ")\n"
+    ")\n",
+    "full_pipeline = Pipeline([\n",
+    "        ('transformation', preprocessor),\n",
+    "        ('regressor', RandomForestRegressor())\n",
+    "    ])"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Train Linear Regression model and then predict on test set"
+    "### 1st GridSearchCV"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def fit_predict(pipeline, X_train, y_train):\n",
-    "    pipeline.fit(X_train, y_train)\n",
-    "    y_pred = pipeline.predict(X_train)\n",
-    "    print(f'Train - R2 Score: {r2_score(y_train, y_pred)}')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train - R2 Score: 0.6724383816327502\n"
+      "...Done.\n",
+      "Best hyperparameters :  {'regressor__max_depth': 20, 'regressor__max_features': 'auto', 'regressor__n_estimators': 100}\n",
+      "Best R2 score :  0.60641260059794\n"
      ]
     }
    ],
    "source": [
-    "full_pipeline = Pipeline([\n",
-    "        ('transformation', preprocessor),\n",
-    "        ('regressor', LinearRegression())\n",
-    "    ])\n",
-    "fit_predict(full_pipeline, X_train, y_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.5691483913039661"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "r2_score(y_test, full_pipeline.predict(X_test))"
+    "params = {\n",
+    "    #'transformation__n_components': [37],\n",
+    "    'regressor__max_depth': [10, 15, 20, 500] ,\n",
+    "    'regressor__n_estimators': [10, 50, 100, 500],\n",
+    "    #'min_samples_split': [],\n",
+    "    'regressor__max_features': ['auto', 'log2']\n",
+    "}\n",
+    "gridsearch = GridSearchCV(full_pipeline, param_grid = params, cv = 3) # cv : the number of folds to be used for CV\n",
+    "gridsearch.fit(X_train, y_train)\n",
+    "print(\"...Done.\")\n",
+    "print(\"Best hyperparameters : \", gridsearch.best_params_)\n",
+    "print(\"Best R2 score : \", gridsearch.best_score_)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Predict on test set"
+    "#### Scores on train and test sets"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train - R2 Score: 0.8946020947310616\n"
+      "Train - R2 Score: 0.9023083357920088\n",
+      "0.8030169311511185\n"
      ]
     }
    ],
    "source": [
-    "full_pipeline = Pipeline([\n",
-    "        ('transformation', preprocessor),\n",
-    "        ('random_forest', RandomForestRegressor(max_depth=10))\n",
-    "    ])\n",
-    "fit_predict(full_pipeline, X_train, y_train)"
+    "best_predictor = gridsearch.best_estimator_\n",
+    "fit_predict(best_predictor,X_train, y_train)\n",
+    "\n",
+    "score_testset = r2_score(y_test, best_predictor.predict(X_test))\n",
+    "print(score_testset)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2nd GridSearchCV"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.6494751401369756"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "...Done.\n",
+      "Best hyperparameters :  {'regressor__max_depth': 10, 'regressor__max_features': 'log2', 'regressor__min_samples_split': 6, 'regressor__n_estimators': 50}\n",
+      "Best R2 score :  0.6378853853654733\n"
+     ]
     }
    ],
    "source": [
-    "y_pred = full_pipeline.predict(X_test)\n",
-    "r2_score(y_test, y_pred)"
+    "params = {\n",
+    "    #'transformation__n_components': [37],\n",
+    "    'regressor__max_depth': [10, 12] , #1st try[5, 10, 12, 18, 20]->Score: 0.68\n",
+    "    'regressor__n_estimators': [10, 15, 50, 100],\n",
+    "    'regressor__min_samples_split': [2, 4, 6, 8, 10],\n",
+    "    'regressor__max_features': ['auto', 'log2']\n",
+    "}\n",
+    "gridsearch = GridSearchCV(full_pipeline, param_grid = params, cv = 5) # 1st try: cv=5 the number of folds to be used for CV\n",
+    "gridsearch.fit(X_train, y_train)\n",
+    "print(\"...Done.\")\n",
+    "print(\"Best hyperparameters : \", gridsearch.best_params_)\n",
+    "print(\"Best R2 score : \", gridsearch.best_score_)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Scores on train and test sets"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['./../models/score_predictor.joblib']"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train - R2 Score: 0.847825547037343\n",
+      "0.7401983238094778\n"
+     ]
     }
    ],
    "source": [
-    "MODELS_FOLDER = './../models'\n",
-    "joblib.dump(full_pipeline, os.path.join(MODELS_FOLDER, \"score_predictor.joblib\"))"
+    "best_predictor = gridsearch.best_estimator_\n",
+    "fit_predict(best_predictor,X_train, y_train)\n",
+    "\n",
+    "score_testset = r2_score(y_test, best_predictor.predict(X_test))\n",
+    "print(score_testset)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
