--- a/notebooks/01-eda.ipynb
+++ b/notebooks/01-eda.ipynb
@@ -4643,6 +4643,7 @@
    ],
    "source": [
     "#Get a global overview of the DQR Indicators: according to documentation from Agribalyse, most values are below 3\n",
+    "#a value of 1 means the data has a high trust indicator, a value of 5 on data isn't really trustworthy\n",
     "print(etape_df[\"DQR__TeR\"].describe())\n",
     "print(etape_df[\"DQR__TiR\"].describe())\n",
     "print(etape_df[\"DQR__GR\"].describe())\n",
