--- a/notebooks/05-predict-model.ipynb
+++ b/notebooks/05-predict-model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "0ce620b3-3ec4-414b-8c70-3da036cb0c05",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "36f05690-e67e-44b2-ae08-04f836d78aca",
    "metadata": {},
    "outputs": [],
@@ -39,12 +39,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "4d462a0b-8f4c-458c-b446-f59a8119bc72",
    "metadata": {},
    "outputs": [],
    "source": [
-    "score_predictor = joblib.load(os.path.join(MODELS_FILE_PATH,'score_predictor.joblib'))\n",
+    "score_predictor = joblib.load(os.path.join(MODELS_FILE_PATH,'score_predictor_v2.joblib'))\n",
     "canonical_df = pd.read_csv(os.path.join(INPUT_DATA_FILE_PATH,'ingredients_data_format.csv'))\n",
     "statistics_df = pd.read_csv(os.path.join(INTERIM_FILE_PATH,'Agribalyse_MinMax ingredient.csv'))"
    ]
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "8874b1e2-b5b3-4228-96e3-3634b7644b99",
    "metadata": {},
    "outputs": [
@@ -140,7 +140,7 @@
        "4          Abricot  0.004451  0.046987"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "b58fadf0-8274-491e-a8d8-e21398f2255e",
    "metadata": {},
    "outputs": [
@@ -260,7 +260,7 @@
        "[1 rows x 639 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "bc59f838-8deb-4032-8a99-48fc5aa0db45",
    "metadata": {},
    "outputs": [],
@@ -368,24 +368,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "b2328440-8922-4766-9852-44f75c408861",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'metric_df' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_11556/419626121.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmetric_df\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mloc\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0muser_input\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'metric_df' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "metric_df.loc[user_input, :]"
+    "#metric_df.loc[user_input, :]"
    ]
   },
   {
@@ -400,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "277108fe-6294-4b1f-ad2d-0df6d1ff86dd",
    "metadata": {},
    "outputs": [],
@@ -414,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "36d563fb-9d43-4a46-9a69-4025152a75c8",
    "metadata": {},
    "outputs": [],
@@ -433,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "a0aee32f-4daf-4f82-ad80-2d001873ed62",
    "metadata": {},
    "outputs": [],
@@ -446,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "e4348bc5-b5b1-42e6-bb6b-134e05799c79",
    "metadata": {},
    "outputs": [
@@ -501,7 +489,7 @@
        "0              0.398916        0.046987  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -521,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "60ed01e7-ab07-47ed-809a-13d93dd176cf",
    "metadata": {},
    "outputs": [],
@@ -531,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "930ec560-e159-4253-83a0-1ebf20b666a0",
    "metadata": {},
    "outputs": [
@@ -564,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "ba84a54f-29c1-46a1-aac7-ec4798ee38f7",
    "metadata": {},
    "outputs": [],
@@ -574,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "34157776-9434-485b-9123-4bd7270587df",
    "metadata": {},
    "outputs": [
@@ -630,119 +618,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "f2b03d6a-c3dd-4b5a-b11a-03d2308b5cbc",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Abats de bœuf</th>\n",
-       "      <th>Abats de porc</th>\n",
-       "      <th>Abats de poulet</th>\n",
-       "      <th>Abats de veau</th>\n",
-       "      <th>Abricot</th>\n",
-       "      <th>Ail</th>\n",
-       "      <th>Amande</th>\n",
-       "      <th>Amidon de maïs</th>\n",
-       "      <th>Ananas</th>\n",
-       "      <th>Anchois</th>\n",
-       "      <th>...</th>\n",
-       "      <th>max_EF_Viande de moutton sans os</th>\n",
-       "      <th>max_EF_Viande de porc maigre</th>\n",
-       "      <th>max_EF_Viande de poulet sans os</th>\n",
-       "      <th>max_EF_Viande de veau sans os</th>\n",
-       "      <th>max_EF_Vin blanc</th>\n",
-       "      <th>max_EF_Vin rouge</th>\n",
-       "      <th>max_EF_Yaourt</th>\n",
-       "      <th>max_EF_citron</th>\n",
-       "      <th>max_EF_Échalote</th>\n",
-       "      <th>max_EF_Œuf de poule</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1 rows × 639 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Abats de bœuf  Abats de porc  Abats de poulet  Abats de veau  Abricot  Ail  \\\n",
-       "0            0.0            0.0              0.0            1.0      1.0  0.0   \n",
-       "\n",
-       "   Amande  Amidon de maïs  Ananas  Anchois  ...  \\\n",
-       "0     1.0             0.0     0.0      0.0  ...   \n",
-       "\n",
-       "   max_EF_Viande de moutton sans os  max_EF_Viande de porc maigre  \\\n",
-       "0                               0.0                           0.0   \n",
-       "\n",
-       "   max_EF_Viande de poulet sans os  max_EF_Viande de veau sans os  \\\n",
-       "0                              0.0                            0.0   \n",
-       "\n",
-       "   max_EF_Vin blanc  max_EF_Vin rouge  max_EF_Yaourt  max_EF_citron  \\\n",
-       "0               0.0               0.0            0.0            0.0   \n",
-       "\n",
-       "   max_EF_Échalote  max_EF_Œuf de poule  \n",
-       "0              0.0                  0.0  \n",
-       "\n",
-       "[1 rows x 639 columns]"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "canonical_df"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 21,
-   "id": "b273ad4d-3611-402a-8b26-aaf044c150ac",
+   "id": "f2b03d6a-c3dd-4b5a-b11a-03d2308b5cbc",
    "metadata": {},
    "outputs": [
     {
@@ -847,30 +724,109 @@
     }
    ],
    "source": [
-    "format_ingredients_list(user_input, canonical_df, statistics_df)\n",
     "canonical_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "4ec07c62-8fc6-4b8c-9c46-d04ba88fbc90",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "formatted_input"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 22,
-   "id": "cc677f63-f8fa-4b12-b9be-9b35ed8fa2b4",
+   "id": "b273ad4d-3611-402a-8b26-aaf044c150ac",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Abats de bœuf</th>\n",
+       "      <th>Abats de porc</th>\n",
+       "      <th>Abats de poulet</th>\n",
+       "      <th>Abats de veau</th>\n",
+       "      <th>Abricot</th>\n",
+       "      <th>Ail</th>\n",
+       "      <th>Amande</th>\n",
+       "      <th>Amidon de maïs</th>\n",
+       "      <th>Ananas</th>\n",
+       "      <th>Anchois</th>\n",
+       "      <th>...</th>\n",
+       "      <th>max_EF_Viande de moutton sans os</th>\n",
+       "      <th>max_EF_Viande de porc maigre</th>\n",
+       "      <th>max_EF_Viande de poulet sans os</th>\n",
+       "      <th>max_EF_Viande de veau sans os</th>\n",
+       "      <th>max_EF_Vin blanc</th>\n",
+       "      <th>max_EF_Vin rouge</th>\n",
+       "      <th>max_EF_Yaourt</th>\n",
+       "      <th>max_EF_citron</th>\n",
+       "      <th>max_EF_Échalote</th>\n",
+       "      <th>max_EF_Œuf de poule</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1 rows × 639 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "array([0.80855531])"
+       "   Abats de bœuf  Abats de porc  Abats de poulet  Abats de veau  Abricot  Ail  \\\n",
+       "0            0.0            0.0              0.0            1.0      1.0  0.0   \n",
+       "\n",
+       "   Amande  Amidon de maïs  Ananas  Anchois  ...  \\\n",
+       "0     1.0             0.0     0.0      0.0  ...   \n",
+       "\n",
+       "   max_EF_Viande de moutton sans os  max_EF_Viande de porc maigre  \\\n",
+       "0                               0.0                           0.0   \n",
+       "\n",
+       "   max_EF_Viande de poulet sans os  max_EF_Viande de veau sans os  \\\n",
+       "0                              0.0                            0.0   \n",
+       "\n",
+       "   max_EF_Vin blanc  max_EF_Vin rouge  max_EF_Yaourt  max_EF_citron  \\\n",
+       "0               0.0               0.0            0.0            0.0   \n",
+       "\n",
+       "   max_EF_Échalote  max_EF_Œuf de poule  \n",
+       "0              0.0                  0.0  \n",
+       "\n",
+       "[1 rows x 639 columns]"
       ]
      },
      "execution_count": 22,
@@ -879,7 +835,40 @@
     }
    ],
    "source": [
-    "score_predictor.predict(canonical_df)"
+    "#format_ingredients_list(user_input, canonical_df, statistics_df)\n",
+    "canonical_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "4ec07c62-8fc6-4b8c-9c46-d04ba88fbc90",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'formatted_input' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_15828/1558834930.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mformatted_input\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'formatted_input' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "formatted_input"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cc677f63-f8fa-4b12-b9be-9b35ed8fa2b4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#score_predictor.predict(canonical_df)"
    ]
   },
   {
@@ -888,14 +877,19 @@
    "id": "f88419ae-01f2-4cf0-b60f-a95c0ef165c0",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "score_predictor.predict(canonical_df)"
+   ]
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "5cc47c8831822e32dd5f765150260df6f896d34b43f3e216997ee9b0d9ca468e"
+  },
   "kernelspec": {
    "display_name": "kernel-pez-jedha",
    "language": "python",
-   "name": "kernel-pez-jedha"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
